--- a/static/css/description.css
+++ b/static/css/description.css
@@ -1,5 +1,7 @@
 .description-wrapper {
     background-image: url("/static/img/interface/wrapperbackground.png");
+    background-size: cover;
+    background-position: center;
   
     width: 600px;
     height: 800px;
@@ -10,7 +12,7 @@
     padding: 53px 25px 53px 40px;
   
     display: flex;
-    color: aliceblue;
+    color: var(--primary-color);
     overflow: hidden;
 }
   
@@ -42,5 +44,5 @@
     margin-bottom: 5px;
     line-height: 30px;
     font-size: 28px;
-    color: #5eb4ff;
+    color: var(--secondary-color);
 } 
