--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Tektur&display=swap');
+@import url(variables.css);
 @import url(table.css);
 @import url(navbar.css);
 @import url(description.css);
@@ -12,7 +13,7 @@
 }
 
 body {
-  color: aliceblue;
+  color: var(--primary-color);
 }
 
 .hidden {
