--- a/static/css/variables.css
+++ b/static/css/variables.css
@@ -4,4 +4,5 @@
     --font-family-primary: 'Play', sans-serif;
     --font-family-secondary: 'Tektur', serif;
     --font-weight-primary: 400;
+    --stroke-color: #034D72;
 }
