--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -61,7 +61,28 @@ body {
   background: #555;
 }
 
+
 .hidden {
-  display: none;
+  display: none !important;
 }
   
+
+
+.wrapper {
+  background-image: url("/static/img/interface/wrapperbackground.png");
+  background-size: cover;
+  background-position: center;
+
+  width: 600px;
+  height: 800px;
+  position: absolute;
+  top: 50%;
+  left: 320px;
+  transform: translate(-50%, -50%);
+  padding: 53px 25px 53px 40px;
+
+  display: flex;
+  color: var(--primary-color);
+  overflow: hidden;
+}
+
