--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,6 +7,7 @@
 @import url(discoverButton.css);
 @import url(settings.css);
 @import url(toggle.css);
+@import url(search.css);
 
 * {
   box-sizing: border-box;
@@ -17,56 +18,6 @@
 body {
   color: var(--primary-color);
 }
-
-.hidden {
-  display: none;
-}
-
-.search-menu {
-  position: absolute;
-  top: 60px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: rgba(0, 0, 0, 0.8);
-  padding: 10px;
-  border-radius: 5px;
-  width: 250px;
-}
-
-.search-menu input {
-  width: 100%;
-  padding: 5px;
-  border: none;
-  outline: none;
-  background: #222;
-  color: white;
-}
-
-.search-menu ul {
-  list-style: none;
-  padding: 0;
-  margin: 5px 0 0 0;
-  max-height: 150px;
-  overflow-y: auto;
-}
-
-.search-menu li {
-  padding: 5px;
-  cursor: pointer;
-  background: #333;
-  color: white;
-}
-
-.search-menu li:hover {
-  background: #555;
-}
-
-
-.hidden {
-  display: none !important;
-}
-  
-
 
 .wrapper {
   background-image: url("/static/img/interface/wrapperbackground.png");
@@ -86,3 +37,6 @@ body {
   overflow: hidden;
 }
 
+.hidden {
+  display: none;
+}
