--- a/static/css/description.css
+++ b/static/css/description.css
@@ -1,21 +1,10 @@
 .description {
     overflow-y:scroll;
 }
-  
-.description::-webkit-scrollbar {
-    width: 15px;
-}
-  
-.description::-webkit-scrollbar-track {
-    background-color: #111E2B;
-}
-  
-.description::-webkit-scrollbar-thumb {
-    background-color: #034D72;
-}
     
 .description-blocks {
     margin-right: 20px;
+    animation: fadeIn 0.5s ease-in-out;
 }
   
 .description-block {
