--- a/static/css/variables.css
+++ b/static/css/variables.css
@@ -5,4 +5,5 @@
     --font-family-secondary: 'Tektur', serif;
     --font-weight-primary: 400;
     --stroke-color: #034D72;
+    --stroke-color-active: #087db8;
 }
