--- a/static/css/discoverButton.css
+++ b/static/css/discoverButton.css
@@ -9,13 +9,23 @@
     height: 276px; 
     position: absolute;
     top: 50%;
-    right: -70px;
-    transform: translate(-50%, -50%);
+    right: 20px;
+    transform: translate(0, -50%);
     padding: 50px 20px;
     
     border: none;
     cursor: pointer; 
     
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+.button-content {
+    height: 100%;
+    animation: fadeInButton 0.5s ease-in-out;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
