--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -14,6 +14,7 @@
     width: 100%;
     grid-template-columns: 60px 1fr;
     gap: 20px;
+    animation: fadeIn 0.5s ease-in-out;
 }
 
 .settings-block-text {
