--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -30,8 +30,8 @@ body {
   height: 800px;
   position: absolute;
   top: 50%;
-  left: 320px;
-  transform: translate(-50%, -50%);
+  left: 20px;
+  transform: translate(0, -50%);
   padding: 53px 25px 53px 40px;
 
   display: flex;
