--- a/static/css/description.css
+++ b/static/css/description.css
@@ -1,35 +1,6 @@
-.description-wrapper {
-    background-image: url("/static/img/interface/wrapperbackground.png");
-    background-size: cover;
-    background-position: center;
-  
-    width: 600px;
-    height: 800px;
-    position: absolute;
-    top: 50%;
-    left: 320px;
-    transform: translate(-50%, -50%);
-    padding: 53px 25px 53px 40px;
-  
-    display: flex;
-    color: var(--primary-color);
-    overflow: hidden;
-}
-  
 .description {
     overflow-y:scroll;
-}
-  
-.description::-webkit-scrollbar {
-    width: 15px;
-}
-  
-.description::-webkit-scrollbar-track {
-    background-color: #111E2B;
-}
-  
-.description::-webkit-scrollbar-thumb {
-    background-color: #034D72;
+    animation: fadeIn 0.5s ease-in-out;
 }
     
 .description-blocks {
@@ -45,4 +16,4 @@
     line-height: 30px;
     font-size: 28px;
     color: var(--secondary-color);
-} 
+}
