--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,6 +7,9 @@
 @import url(discoverButton.css);
 @import url(settings.css);
 @import url(toggle.css);
+@import url(search.css);
+@import url(animations.css);
+@import url(scrollbar.css);
 
 * {
   box-sizing: border-box;
@@ -18,50 +21,38 @@ body {
   color: var(--primary-color);
 }
 
-.hidden {
-  display: none;
-}
 
-.search-menu {
+
+.wrapper {
+  background-image: url("/static/img/interface/wrapperbackground.png");
+  background-size: cover;
+  background-position: center;
+
+  width: 600px;
+  height: 800px;
   position: absolute;
-  top: 60px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: rgba(0, 0, 0, 0.8);
-  padding: 10px;
-  border-radius: 5px;
-  width: 250px;
-}
+  top: 50%;
+  left: 20px;
+  transform: translate(0, -50%);
+  padding: 53px 25px 53px 40px;
 
-.search-menu input {
-  width: 100%;
-  padding: 5px;
-  border: none;
-  outline: none;
-  background: #222;
-  color: white;
-}
-
-.search-menu ul {
-  list-style: none;
-  padding: 0;
-  margin: 5px 0 0 0;
-  max-height: 150px;
-  overflow-y: auto;
-}
-
-.search-menu li {
-  padding: 5px;
-  cursor: pointer;
-  background: #333;
-  color: white;
-}
-
-.search-menu li:hover {
-  background: #555;
+  display: flex;
+  color: var(--primary-color);
 }
 
 .hidden {
   display: none;
 }
-  
+
+#pause-btn {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #333;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
