--- a/static/css/description.css
+++ b/static/css/description.css
@@ -3,15 +3,15 @@
     animation: fadeIn 0.5s ease-in-out;
 }
     
-.description-blocks {
+.description__blocks {
     margin-right: 20px;
 }
   
-.description-block {
+.description__block {
     margin-bottom: 20px;
 }
   
-.description-block-title {
+.description h5 {
     margin-bottom: 5px;
     line-height: 30px;
     font-size: 28px;
