--- a/static/css/explore-button.css
+++ b/static/css/explore-button.css
@@ -1,4 +1,4 @@
-.discoverButton {
+.explore-button {
     background-color: transparent;
     background-image: url("/static/img/interface/strokemini.png");
     background-size: cover;
@@ -23,7 +23,7 @@
     
 }
 
-.button-content {
+.explore-button__content {
     height: 100%;
     animation: fadeInButton 0.5s ease-in-out;
     display: flex;
