--- a/static/css/explore-button.css
+++ b/static/css/explore-button.css
@@ -31,3 +31,7 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.explore-button:hover {
+    background-image: url("/static/img/interface/strokemini-hover.png");
+}
