--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -1,5 +1,16 @@
 .settings {
     animation: fadeIn 0.5s ease-in-out;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.settings__blocks {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    text-align: center;
 }
 
 .settings__block {
