--- a/static/css/toggle.css
+++ b/static/css/toggle.css
@@ -2,8 +2,8 @@
     font-size: 17px;
     position: relative;
     display: inline-block;
-    width: 3.5em;
-    height: 2em;
+    width: 58px;
+    height: 32px;
 }
 
 .switch input {
